<resources>
    <string name="app_name">FootySortIt</string>
    <string name="my_game">My game</string>
    <string name="introduction">"Welcome to FootySortIt. Press My Game to organise your team."</string>
    <string name="composeMessage">Type in the message you want to send to your players</string>
    <string name="sendToPlayers">Send text to the players</string>
    <string name="playerList">Player List</string>
    <string name="pickPlayers">Pick your players</string>
    <string name="viewAllPlayers">View your player</string>
    <string name="fullPlayerList">Team Sheet</string>
    <string name="emptyMessage">Your text message is empty</string>
    <string name="totalPlayers">Total Players : %1$d</string>
    <string name="options">Options</string>
    <string name="text_sent">Text has been sent to the player list.</string>
    <string name="need_permission">The app needs you to grant permission to see your contacts</string>
    <string name="empty_player_list">You need to select your players first</string>
    <string name="no_playing_players">You have no players who are playing</string>
    <string name="search_by_name">Search by name…</string>
    <string name="clear_list">Clear My List</string>
    <string name="send_text">Send SMS</string>
    <string name="cancel">Cancel</string>
    <string name="SMSNotSent">SMS not sent</string>
    <string name="charged_for_sms">Your carrier may charge for SMS messages sent by FootySortIt</string>
    <string name="testAdID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="LiveAdID">ca-app-pub-2142360027287638~9531994105</string>
    <string name="privacy">Privacy</string>
    <string name="totalIsPlaying">Playing: %1$d</string>
    <string name="totalNotPlaying">Not Playing: %1$d</string>
    <string name="totalMaybePlaying">Maybe playing: %1$d</string>
    <string name="smsConcatMsgYesNoMaybe">\nPlease reply Yes, No or Maybe</string>
    <string name="userNoteForSms">The following sentence will be added to the end of the message:\nPlease reply Yes, No or Maybe </string>
    <string name="sendToPlaying">Send SMS to players \nwho are playing</string>
    <string name="totalPlayersPicked">Total Players:%1$d</string>
    <string name="automateGames">Automate</string>
    <string name="onePickYourPlayers">1) Pick your players: </string>
    <string name="twoComposeYourMessage">2) Compose your message to send to the players: </string>
    <string name="threeChooseDate">3) Choose a date and time for the text to be sent out: </string>
    <string name="fourRepeat">4) Select recurrence: </string>
    <string name="chooseDate">Choose Date: </string>
    <string name="ChooseTime">Choose Time: </string>
    <string name="dateOfTheGame">Date to send out the text</string>
    <string name="timeOfTheGame">Time to send out the text</string>
    <string name="radioDay">Day</string>
    <string name="agOrganisedFor">Automate Game date set for : </string>
    <string name="agEmptyDate">Please select a date</string>
    <string name="agEmptyTime">Please select a time</string>
    <string name="toPitch">Pitch</string>
    <string name="emailKey">emailKey</string>
    <string name="emailPref">E-mail Us</string>
    <string name="tutPickPlayers">Pick your players for your game here</string>
    <string name="tutSendSms">Type your message below and then press here to send them an Sms</string>
    <string name="tutAddSen">We add this, so when the player responds we can automatically update their status in the next screen</string>
    <string name="tutViewPlayers">View all your players here</string>
    <string name="tutRvFullPlayers">Swipe right to remove a player from the list \n Tap the ball icon to change their status.</string>
    <string name="tutPitch">View your players on the pitch here to set up a formation.</string>
    <string name="tutPitchPlayers">Your players will appear here and you can drag them to set up your formation</string>
    <string name="tutSharePitch">Press here to share the formation with your contacts</string>
</resources>
